Fixed ignore fileversions

--- a/.hgignore
+++ b/.hgignore
@@ -29,6 +29,6 @@ demo/cyclope_project/cyclope_project_index/*
 *_big* 
 *_cropped* 
 *_croppedthumbnail* 
-*_slideshow-news* 
+*_slideshow* 
 *_slideshow-background* 
 *_crop*
