--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include LICENSE.txt README.rst CONTRIBUTORS.rst CHANGELOG.rst
 recursive-include cyclope/media *
 recursive-include cyclope *.html *.txt *.py
 recursive-include cyclope/fixtures *.json
+recursive-include cyclope/locale *.po *.mo
