add support for listing on multiple categories

--- a/.hgignore
+++ b/.hgignore
@@ -21,6 +21,7 @@ initial_data.json
 django_cyclope.egg-info
 fulldb.json
 demo/cyclope_project/cyclope_project_index/*
+cyclope/server_global_settings.py
 .emacs*
 *_fb_thumb*
 *_thumbnail*
